--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -38,47 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     station  yyyy-mm-dd hh:mm:ss  Longitude [degrees_east]  \\\n",
-      "0  가로림연안1_연안  1997-02-01 00:00:00                126.326944   \n",
-      "2  가로림연안1_연안  1997-05-01 00:00:00                126.326944   \n",
-      "4  가로림연안1_연안  1997-08-01 00:00:00                126.326944   \n",
-      "6  가로림연안1_연안  1997-11-01 00:00:00                126.326944   \n",
-      "8  가로림연안2_연안  1997-02-01 00:00:00                126.313333   \n",
-      "\n",
-      "   Latitude [degrees_north]  bot.depth[m]  수심(m) 수심(text)  총질소[μg/L]  tn_qc  \\\n",
-      "0                 36.946389           0.0    0.0       표층        NaN    NaN   \n",
-      "2                 36.946389           0.0    0.0       표층        NaN    NaN   \n",
-      "4                 36.946389           0.0    0.0       표층        NaN    NaN   \n",
-      "6                 36.946389           0.0    0.0       표층        NaN    NaN   \n",
-      "8                 36.990000           0.0    0.0       표층        NaN    NaN   \n",
-      "\n",
-      "   염분[psu]  ...  amn_qc  유분[mg/L]  fra_qc  총인[μg/L]  totp_qc  dep_flag  \\\n",
-      "0    32.34  ...     2.0       NaN     NaN       NaN      NaN       NaN   \n",
-      "2    31.39  ...     2.0       NaN     NaN       NaN      NaN       NaN   \n",
-      "4    31.63  ...     2.0       NaN     NaN       NaN      NaN       NaN   \n",
-      "6    32.47  ...     2.0       NaN     NaN       NaN      NaN       NaN   \n",
-      "8    32.26  ...     2.0       NaN     NaN       NaN      NaN       NaN   \n",
-      "\n",
-      "   부유물질 농도[mg/L]  유효시간  전체수심(m)  totdisn_qc  \n",
-      "0            NaN   NaN      NaN         NaN  \n",
-      "2            NaN   NaN      NaN         NaN  \n",
-      "4            NaN   NaN      NaN         NaN  \n",
-      "6            NaN   NaN      NaN         NaN  \n",
-      "8            NaN   NaN      NaN         NaN  \n",
-      "\n",
-      "[5 rows x 46 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "surface_df = merged_data.loc[merged_data['수심(text)'] == '표층']\n"
+    "surface_df = merged_data.loc[merged_data['수심(text)'] == '표층']\n",
+    "low_df = merged_data.loc[merged_data['수심(text)'] == '저층']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(folder_path):\n",
+    "    os.makedirs('./data/')\n"
    ]
   }
  ],
