--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1885,59 +1885,531 @@
           36.918892788379196,
           36.91091899972321,
           36.896695810404765,
+          37.28187259737217,
+          36.05691840681726,
+          34.02167224169091,
+          34.0056843628052,
+          35.61197672437339,
           33.47566536101522,
+          37.98233514075366,
           33.438354019146516,
+          37.14156998245278,
+          38.20662640119224,
+          38.288369702787065,
+          35.99223496487684,
           36.08117242177627,
+          35.61276131441144,
+          34.80620296574119,
+          37.064125000354295,
+          38.00006959734475,
+          36.8113842706112,
+          35.320990714963216,
+          33.567283735951264,
+          37.12831210138296,
+          35.76862856070784,
+          37.93765670616665,
+          33.27273162395011,
+          36.27462961469297,
+          34.73429933906516,
+          34.72040977273889,
+          35.05176063805942,
+          37.8019005846503,
+          33.23490448801135,
+          36.881254151799226,
+          37.2354501609704,
+          37.194426307701576,
+          33.493845651074935,
+          35.2864421180098,
+          35.064003146851746,
+          33.344416349987284,
           34.69502652186918,
           34.1465713470314,
+          34.20994343843506,
+          36.24382121258367,
+          36.24539377336038,
+          36.245345790822,
+          38.15126950656196,
+          38.43859808380131,
+          36.213865194034554,
+          37.976248661442526,
+          36.6223719611441,
+          33.23451585817048,
+          36.29342165559535,
+          33.558052729789665,
+          33.4159283556196,
+          33.212303299146924,
+          37.82213366060574,
+          34.83712255060789,
+          37.14525984938177,
           37.84585974869549,
           36.342946928963386,
-          37.567759631431045
+          34.21642226164988,
+          36.00549231212261,
+          33.1938969807008,
+          36.02589509279585,
+          33.46316379657202,
+          33.30137111115698,
+          34.224543937834085,
+          34.294389615450484,
+          34.71797223972675,
+          38.079314583645726,
+          33.480769056182055,
+          37.265476886227304,
+          34.891825647207554,
+          33.4810398770897,
+          34.72710943851092,
+          35.88581975959755,
+          33.29830001050618,
+          33.55899772469746,
+          34.491253800877246,
+          37.567759631431045,
+          34.73623139698219,
+          34.423189070968874,
+          35.83275539544502,
+          35.906696205467085,
+          37.86003312268957,
+          36.15245984899542,
+          36.16395327608251,
+          38.096512518457075,
+          34.79787079474437,
+          34.460207210022986,
+          34.6210563654318,
+          34.660661146453435,
+          34.77045085650468,
+          35.09907727695145,
+          36.30253408887705,
+          35.32156052612896,
+          33.56577115730397,
+          35.59349767092516,
+          33.26545400313421,
+          33.265776313887045,
+          37.097860998357476,
+          35.264272673546316,
+          35.27011994989317,
+          35.48517868066119,
+          35.95565340764466,
+          35.81201377028441,
+          35.81193865352242,
+          34.69827799590814,
+          38.12033021414675,
+          34.6946608939823,
+          33.548794440762435,
+          37.90302205582509,
+          37.91480696586217,
+          35.55575439142905,
+          36.409124333503485,
+          37.525598780691894,
+          37.5493472768398,
+          34.37504889306018,
+          37.51181933823875,
+          36.72214913252327,
+          33.30492984466042,
+          33.532699612048646,
+          33.25271358491182,
+          33.23538417544478,
+          33.550062149126234,
+          33.56291030925411,
+          37.00822046142349,
+          36.2204066434569
          ],
          "legendgroup": "",
          "lon": [
           126.33529982938865,
           126.35319739292902,
           126.34867417894498,
+          129.32931493650017,
+          129.579876815778,
+          127.32566666575019,
+          127.32213333300001,
+          126.45803333325011,
           126.34514918700017,
+          124.69081125331297,
           126.93456875563004,
+          129.37033941903655,
+          128.6105994065001,
+          128.55532163190833,
+          129.57053749950012,
           129.5438540679902,
+          129.45957083300016,
+          128.67811666625005,
+          126.55119999981673,
+          128.74447451850017,
+          129.4609854960545,
+          129.27812839900014,
+          126.75074091551619,
+          129.37602358040363,
+          129.49909916297827,
+          128.7940565837331,
+          126.71636655656403,
+          126.25683129786046,
+          128.63929999950017,
+          128.63305904552374,
+          128.39938262409862,
+          124.69235827875002,
+          126.43907545275488,
+          129.4302623398495,
+          126.08693603161942,
+          126.137175633673,
+          126.41118300000005,
+          129.26236739024705,
+          129.09237071384644,
+          126.16581664607384,
           128.17547499900013,
           126.7490583337501,
+          126.75919999950008,
+          126.53293787877647,
+          126.5254916665001,
+          126.53130529147131,
+          128.6161938670673,
+          128.46414623283727,
+          129.3900791665002,
+          124.64326570252501,
+          129.41706018246168,
+          126.60216733543666,
+          129.38473232840624,
+          126.6993872490001,
+          126.2214415000002,
+          126.30881316070395,
+          128.89256887825013,
+          128.17601666650012,
+          126.28047374610605,
           128.87504166600013,
           129.3870370505001,
-          129.12400921357425
+          127.24059777250011,
+          129.57835612500014,
+          126.2821525763394,
+          129.58304719885052,
+          126.94219841581764,
+          126.81565486600005,
+          126.76794101663609,
+          127.35688872883748,
+          128.01838764360195,
+          128.68437500900006,
+          126.92121828104962,
+          129.33504873843276,
+          128.0804958330001,
+          126.353488707,
+          127.67559922447981,
+          129.53269628832538,
+          126.7732284774072,
+          126.64022266107236,
+          127.8198128924123,
+          129.12400921357425,
+          128.38624166650015,
+          127.81104166575005,
+          129.5167293625001,
+          129.5342672811188,
+          128.86091018700017,
+          129.40262500025017,
+          129.40408718306378,
+          128.66777902099193,
+          127.76154223669062,
+          127.52178316322431,
+          128.31204999950012,
+          128.31319583300012,
+          127.92528705620407,
+          129.12493333350005,
+          129.38156725417252,
+          129.27116662600008,
+          126.78788224601226,
+          126.25301211264787,
+          126.65575374232685,
+          126.67615004892514,
+          126.44479166675,
+          129.24182500000018,
+          129.25270750050015,
+          129.43961666625,
+          129.5524831005331,
+          126.39209453395029,
+          126.39565996536908,
+          128.6006931030854,
+          128.63450555550014,
+          128.05577807250017,
+          126.63403527393871,
+          128.8357148319103,
+          128.82418706827002,
+          129.46131146429548,
+          129.43278625119103,
+          129.13062083375019,
+          130.90415972250014,
+          127.07910000000004,
+          130.7959375733692,
+          126.14142118065661,
+          126.83449865650016,
+          126.88864100000012,
+          126.63537073348266,
+          126.3961035000001,
+          126.83432500000004,
+          126.81194163653993,
+          129.42288096859875,
+          126.03368333300011
          ],
          "marker": {
           "color": [
            364024.073019,
            233886.674985,
            416441.532503,
+           363596.257702,
+           636458.835231,
+           67795.3323551,
+           890484.231882,
+           653236.489598,
            1395045.22374,
+           79321.5717232,
            2151821.27271,
+           629521.038619,
+           1865171.84765,
+           1576091.5113,
+           718460.807979,
            411073.732928,
+           240574.681284,
+           1404530.24792,
+           15852.8430755,
+           1115579.52601,
+           341098.457439,
+           879856.245429,
+           6477269.62761,
+           533770.402132,
+           974473.389495,
+           1844331.75724,
+           2219557.38093,
+           1635840.43321,
+           246889.400376,
+           191661.18337,
+           1455318.5303,
+           1172081.85136,
+           1106603.80551,
+           2969838.73073,
+           432693.003573,
+           304540.091877,
+           998580.33426,
+           452637.120311,
+           378870.399293,
+           1239219.59768,
            1883040.53184,
            1129087.95338,
+           769414.707056,
+           1646.38116318,
+           52434.4784457,
+           12915.8649891,
+           1537814.0049,
+           1023948.70152,
+           1069956.09392,
+           614767.604739,
+           831591.248721,
+           2458266.49203,
+           1701161.93598,
+           1823705.62272,
+           4830076.86137,
+           2014052.0634,
+           473029.390387,
+           1369952.64122,
+           530049.54265,
            2314485.07504,
            889656.49118,
-           1089028.00018
+           4155195.42337,
+           377889.422403,
+           3332990.88456,
+           592634.413516,
+           580486.002199,
+           1284885.68184,
+           2065501.39451,
+           1294826.38772,
+           1325519.04627,
+           1356098.52265,
+           3310353.09279,
+           509130.858125,
+           2759523.72255,
+           959255.687114,
+           6180725.65669,
+           350925.536573,
+           1051629.69872,
+           874623.726498,
+           978036.027998,
+           1089028.00018,
+           1149644.12565,
+           18073432.7038,
+           603672.581279,
+           1256487.33757,
+           3181482.88637,
+           16607.4457139,
+           83021.0844098,
+           1470915.01484,
+           488622.06494,
+           2131215.35796,
+           1292748.84068,
+           608484.282949,
+           1417127.60335,
+           846377.167976,
+           531140.097465,
+           458986.384462,
+           2250587.21139,
+           53952.5509477,
+           1063696.40666,
+           873926.486653,
+           1060282.84691,
+           151007.110309,
+           258826.932219,
+           372724.973517,
+           1445428.95589,
+           44373.4916357,
+           10379.1237549,
+           3737257.56608,
+           308605.636195,
+           419370.762355,
+           797216.735366,
+           835761.218468,
+           1760143.26492,
+           1773747.84831,
+           299960.963267,
+           1412584.11887,
+           535802.607232,
+           1699835.78452,
+           82329.3751695,
+           1234.69273437,
+           3430594.99149,
+           6545825.82998,
+           1749695.33912,
+           2232584.09405,
+           2010346.19733,
+           2322640.71589,
+           712530.672618,
+           384287.330961
           ],
           "coloraxis": "coloraxis",
           "size": [
            364024.073019,
            233886.674985,
            416441.532503,
+           363596.257702,
+           636458.835231,
+           67795.3323551,
+           890484.231882,
+           653236.489598,
            1395045.22374,
+           79321.5717232,
            2151821.27271,
+           629521.038619,
+           1865171.84765,
+           1576091.5113,
+           718460.807979,
            411073.732928,
+           240574.681284,
+           1404530.24792,
+           15852.8430755,
+           1115579.52601,
+           341098.457439,
+           879856.245429,
+           6477269.62761,
+           533770.402132,
+           974473.389495,
+           1844331.75724,
+           2219557.38093,
+           1635840.43321,
+           246889.400376,
+           191661.18337,
+           1455318.5303,
+           1172081.85136,
+           1106603.80551,
+           2969838.73073,
+           432693.003573,
+           304540.091877,
+           998580.33426,
+           452637.120311,
+           378870.399293,
+           1239219.59768,
            1883040.53184,
            1129087.95338,
+           769414.707056,
+           1646.38116318,
+           52434.4784457,
+           12915.8649891,
+           1537814.0049,
+           1023948.70152,
+           1069956.09392,
+           614767.604739,
+           831591.248721,
+           2458266.49203,
+           1701161.93598,
+           1823705.62272,
+           4830076.86137,
+           2014052.0634,
+           473029.390387,
+           1369952.64122,
+           530049.54265,
            2314485.07504,
            889656.49118,
-           1089028.00018
+           4155195.42337,
+           377889.422403,
+           3332990.88456,
+           592634.413516,
+           580486.002199,
+           1284885.68184,
+           2065501.39451,
+           1294826.38772,
+           1325519.04627,
+           1356098.52265,
+           3310353.09279,
+           509130.858125,
+           2759523.72255,
+           959255.687114,
+           6180725.65669,
+           350925.536573,
+           1051629.69872,
+           874623.726498,
+           978036.027998,
+           1089028.00018,
+           1149644.12565,
+           18073432.7038,
+           603672.581279,
+           1256487.33757,
+           3181482.88637,
+           16607.4457139,
+           83021.0844098,
+           1470915.01484,
+           488622.06494,
+           2131215.35796,
+           1292748.84068,
+           608484.282949,
+           1417127.60335,
+           846377.167976,
+           531140.097465,
+           458986.384462,
+           2250587.21139,
+           53952.5509477,
+           1063696.40666,
+           873926.486653,
+           1060282.84691,
+           151007.110309,
+           258826.932219,
+           372724.973517,
+           1445428.95589,
+           44373.4916357,
+           10379.1237549,
+           3737257.56608,
+           308605.636195,
+           419370.762355,
+           797216.735366,
+           835761.218468,
+           1760143.26492,
+           1773747.84831,
+           299960.963267,
+           1412584.11887,
+           535802.607232,
+           1699835.78452,
+           82329.3751695,
+           1234.69273437,
+           3430594.99149,
+           6545825.82998,
+           1749695.33912,
+           2232584.09405,
+           2010346.19733,
+           2322640.71589,
+           712530.672618,
+           384287.330961
           ],
           "sizemode": "area",
-          "sizeref": 925.794030016
+          "sizeref": 7229.37308152
          },
          "mode": "markers",
          "name": "",
@@ -2004,7 +2476,7 @@
         "mapbox": {
          "center": {
           "lat": 35.8,
-          "lon": 126.93456875563004
+          "lon": 128.05577807250017
          },
          "domain": {
           "x": [
@@ -2853,17 +3325,17 @@
     }
    ],
    "source": [
-    "mf_2013 = mf.loc[mf['시설년도']==2013]\n",
-    "mf_2014 = mf.loc[mf['시설년도']==2014]\n",
-    "mf_2015 = mf.loc[mf['시설년도']==2015]\n",
-    "mf_2016 = mf.loc[mf['시설년도']==2016]\n",
-    "mf_2017 = mf.loc[mf['시설년도']==2017]\n",
-    "mf_2018 = mf.loc[mf['시설년도']==2018]\n",
-    "mf_2019 = mf.loc[mf['시설년도']==2019]\n",
-    "mf_2020 = mf.loc[mf['시설년도']==2020]\n",
+    "mf_2013 = mf.loc[mf['시설년도'] <= 2013]\n",
+    "mf_2014 = mf.loc[mf['시설년도']<= 2014]\n",
+    "mf_2015 = mf.loc[mf['시설년도']<= 2015]\n",
+    "mf_2016 = mf.loc[mf['시설년도']<= 2016]\n",
+    "mf_2017 = mf.loc[mf['시설년도']<= 2017]\n",
+    "mf_2018 = mf.loc[mf['시설년도']<= 2018]\n",
+    "mf_2019 = mf.loc[mf['시설년도']<= 2019]\n",
+    "mf_2020 = mf.loc[mf['시설년도']<= 2020]\n",
     "\n",
     "title = '2018년 해양지형정보 2013~2018바다숲'\n",
-    "buff = mf_2013\n",
+    "buff = mf_2017\n",
     "buff = buff.to_crs(epsg=32652)\n",
     "\n",
     "center = {'lat': 35.8, 'lon': buff['longitude'].median()}\n",
