--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -282,22 +282,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mf_2013 = pd.DataFrame(mf.loc[mf['시설년도']<= 2013])\n",
-    "# mf_2014 = pd.DataFrame(mf.loc[mf['시설년도']<= 2014])\n",
-    "# mf_2015 = pd.DataFrame(mf.loc[mf['시설년도']<= 2015])\n",
-    "# mf_2016 = pd.DataFrame(mf.loc[mf['시설년도']<= 2016])\n",
-    "# mf_2017 = pd.DataFrame(mf.loc[mf['시설년도']<= 2017])\n",
-    "# mf_2018 = pd.DataFrame(mf.loc[mf['시설년도']<= 2018])\n",
-    "# mf_2019 = pd.DataFrame(mf.loc[mf['시설년도']<= 2019])\n",
-    "# mf_2020 = pd.DataFrame(mf.loc[mf['시설년도']<= 2020])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -306,12 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ocean_data 폴더 내의 모든 CSV 파일 목록을 가져옵니다.\n",
     "folder_path = 'Ocean_data'\n",
+    "\n",
     "all_files = [f for f in os.listdir(folder_path) if f.endswith('.csv') and f.startswith('19') or f.startswith('20')]\n",
     "# 제거하려는 열의 리스트\n",
     "\n",
@@ -352,7 +337,59 @@
     "    # 데이터프레임에 해당 열이 있는지 확인하고 제거합니다.\n",
     "    cols_to_drop = [col for col in cols_to_drop if col in data.columns]\n",
     "    data = data.drop(columns=cols_to_drop)\n",
-    "    data.to_csv(f'./data/{filename[:4]}.csv',index = False)"
+    "    data.to_csv(f'./far_ocean_data/{filename[:4]}.csv',index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ocean_data 폴더 내의 모든 CSV 파일 목록을 가져옵니다.\n",
+    "#folder_path = 'Ocean_data'\n",
+    "folder_path = 'Far_Ocean_data'\n",
+    "all_files = [f for f in os.listdir(folder_path) if f.endswith('.csv') and f.startswith('19') or f.startswith('20')]\n",
+    "# 제거하려는 열의 리스트\n",
+    "\n",
+    "# 각 파일을 순차적으로 읽어 데이터 프레임 리스트에 추가합니다.\n",
+    "dfs = []\n",
+    "for filename in all_files:\n",
+    "    cols_to_drop = ['dep_flag', 'Valid_time','project_name',]\n",
+    "    file_path = os.path.join(folder_path, filename)\n",
+    "    df = pd.read_csv(file_path,encoding=\"ANSI\")\n",
+    "    ##Longitude:위도 , Latitude: 경도\n",
+    "    colnames = {'yyyy-mm-dd hh:mm:ss': 'date_time', \n",
+    "                'Longitude [degrees_east]': 'longitude', \n",
+    "                'Latitude [degrees_north]': 'latitude',\n",
+    "                '수심(m)': 'depth(m)',\n",
+    "                '수심(text)': 'depth(text)',\n",
+    "                '유효시간': 'Valid_time',\n",
+    "                \n",
+    "                }\n",
+    "    df.rename(columns=colnames, inplace=True)\n",
+    "\n",
+    "    data = df.copy()\n",
+    "    #데이터 품질값이 1~3인 값만 남기고 나머지는 NaN으로 대체합니다.\n",
+    "    qc_cols = [(idx, col) for idx, col in enumerate(data.columns) if col.endswith('_qc')]\n",
+    "    for idx, col in qc_cols:\n",
+    "        obs_df = data.iloc[:, [idx - 1, idx]].copy()\n",
+    "        obs_df.iloc[~obs_df.iloc[:, 1].isin([1, 2,3]), 0] = np.nan\n",
+    "        col_value = data.columns[idx - 1]\n",
+    "        data[col_value] = obs_df.iloc[:, 0]\n",
+    "    #qc칼럼 제거\n",
+    "    qc_cols = [col for col in data.columns if col.endswith('_qc')]\n",
+    "    data.drop(columns=qc_cols, inplace=True)\n",
+    "\n",
+    "    data['date_time'] = pd.to_datetime(data['date_time'],format='mixed')\n",
+    "    # data['year'] = data['date_time'].dt.year\n",
+    "    # data['month'] = data['date_time'].dt.month\n",
+    "    # data['quarter'] = data['date_time'].dt.quarter\n",
+    "    # data['year_quarter'] = data['year'].astype(str) + data['quarter'].astype(str)\n",
+    "    # 데이터프레임에 해당 열이 있는지 확인하고 제거합니다.\n",
+    "    cols_to_drop = [col for col in cols_to_drop if col in data.columns]\n",
+    "    data = data.drop(columns=cols_to_drop)\n",
+    "    data.to_csv(f'./far_ocean_data/{filename[:4]}.csv',index = False)"
    ]
   },
   {
