--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "[219 rows x 12 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,13 +290,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ocean_data 폴더 내의 모든 CSV 파일 목록을 가져옵니다.\n",
     "folder_path = 'Ocean_data'\n",
     "\n",
+    "all_files = [f for f in os.listdir(folder_path) if f.endswith('.csv') and f.startswith('19') or f.startswith('20')]\n",
+    "# 제거하려는 열의 리스트\n",
+    "\n",
+    "# 각 파일을 순차적으로 읽어 데이터 프레임 리스트에 추가합니다.\n",
+    "dfs = []\n",
+    "for filename in all_files:\n",
+    "    cols_to_drop = ['dep_flag', 'Valid_time','project_name',]\n",
+    "    file_path = os.path.join(folder_path, filename)\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    ##Longitude:위도 , Latitude: 경도\n",
+    "    colnames = {'yyyy-mm-dd hh:mm:ss': 'date_time', \n",
+    "                'Longitude [degrees_east]': 'longitude', \n",
+    "                'Latitude [degrees_north]': 'latitude',\n",
+    "                '수심(m)': 'depth(m)',\n",
+    "                '수심(text)': 'depth(text)',\n",
+    "                '유효시간': 'Valid_time',\n",
+    "                \n",
+    "                }\n",
+    "    df.rename(columns=colnames, inplace=True)\n",
+    "\n",
+    "    data = df.copy()\n",
+    "    #데이터 품질값이 1~3인 값만 남기고 나머지는 NaN으로 대체합니다.\n",
+    "    qc_cols = [(idx, col) for idx, col in enumerate(data.columns) if col.endswith('_qc')]\n",
+    "    for idx, col in qc_cols:\n",
+    "        obs_df = data.iloc[:, [idx - 1, idx]].copy()\n",
+    "        obs_df.iloc[~obs_df.iloc[:, 1].isin([1, 2,3]), 0] = np.nan\n",
+    "        col_value = data.columns[idx - 1]\n",
+    "        data[col_value] = obs_df.iloc[:, 0]\n",
+    "    #qc칼럼 제거\n",
+    "    qc_cols = [col for col in data.columns if col.endswith('_qc')]\n",
+    "    data.drop(columns=qc_cols, inplace=True)\n",
+    "\n",
+    "    data['date_time'] = pd.to_datetime(data['date_time'],format='mixed')\n",
+    "    data['date_time'] = pd.to_datetime(data['date_time']).dt.date\n",
+    "\n",
+    "    # data['year'] = data['date_time'].dt.year\n",
+    "    # data['month'] = data['date_time'].dt.month\n",
+    "    # data['quarter'] = data['date_time'].dt.quarter\n",
+    "    # data['year_quarter'] = data['year'].astype(str) + data['quarter'].astype(str)\n",
+    "    # 데이터프레임에 해당 열이 있는지 확인하고 제거합니다.\n",
+    "    cols_to_drop = [col for col in cols_to_drop if col in data.columns]\n",
+    "    data = data.drop(columns=cols_to_drop)\n",
+    "    data.to_csv(f'./data/{filename[:4]}.csv',index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ocean_data 폴더 내의 모든 CSV 파일 목록을 가져옵니다.\n",
+    "#folder_path = 'Ocean_data'\n",
+    "folder_path = 'Far_Ocean_data'\n",
     "all_files = [f for f in os.listdir(folder_path) if f.endswith('.csv') and f.startswith('19') or f.startswith('20')]\n",
     "# 제거하려는 열의 리스트\n",
     "\n",
@@ -341,58 +395,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ocean_data 폴더 내의 모든 CSV 파일 목록을 가져옵니다.\n",
-    "#folder_path = 'Ocean_data'\n",
-    "folder_path = 'Far_Ocean_data'\n",
-    "all_files = [f for f in os.listdir(folder_path) if f.endswith('.csv') and f.startswith('19') or f.startswith('20')]\n",
-    "# 제거하려는 열의 리스트\n",
-    "\n",
-    "# 각 파일을 순차적으로 읽어 데이터 프레임 리스트에 추가합니다.\n",
-    "dfs = []\n",
-    "for filename in all_files:\n",
-    "    cols_to_drop = ['dep_flag', 'Valid_time','project_name',]\n",
-    "    file_path = os.path.join(folder_path, filename)\n",
-    "    df = pd.read_csv(file_path,encoding=\"ANSI\")\n",
-    "    ##Longitude:위도 , Latitude: 경도\n",
-    "    colnames = {'yyyy-mm-dd hh:mm:ss': 'date_time', \n",
-    "                'Longitude [degrees_east]': 'longitude', \n",
-    "                'Latitude [degrees_north]': 'latitude',\n",
-    "                '수심(m)': 'depth(m)',\n",
-    "                '수심(text)': 'depth(text)',\n",
-    "                '유효시간': 'Valid_time',\n",
-    "                \n",
-    "                }\n",
-    "    df.rename(columns=colnames, inplace=True)\n",
-    "\n",
-    "    data = df.copy()\n",
-    "    #데이터 품질값이 1~3인 값만 남기고 나머지는 NaN으로 대체합니다.\n",
-    "    qc_cols = [(idx, col) for idx, col in enumerate(data.columns) if col.endswith('_qc')]\n",
-    "    for idx, col in qc_cols:\n",
-    "        obs_df = data.iloc[:, [idx - 1, idx]].copy()\n",
-    "        obs_df.iloc[~obs_df.iloc[:, 1].isin([1, 2,3]), 0] = np.nan\n",
-    "        col_value = data.columns[idx - 1]\n",
-    "        data[col_value] = obs_df.iloc[:, 0]\n",
-    "    #qc칼럼 제거\n",
-    "    qc_cols = [col for col in data.columns if col.endswith('_qc')]\n",
-    "    data.drop(columns=qc_cols, inplace=True)\n",
-    "\n",
-    "    data['date_time'] = pd.to_datetime(data['date_time'],format='mixed')\n",
-    "    # data['year'] = data['date_time'].dt.year\n",
-    "    # data['month'] = data['date_time'].dt.month\n",
-    "    # data['quarter'] = data['date_time'].dt.quarter\n",
-    "    # data['year_quarter'] = data['year'].astype(str) + data['quarter'].astype(str)\n",
-    "    # 데이터프레임에 해당 열이 있는지 확인하고 제거합니다.\n",
-    "    cols_to_drop = [col for col in cols_to_drop if col in data.columns]\n",
-    "    data = data.drop(columns=cols_to_drop)\n",
-    "    data.to_csv(f'./far_ocean_data/{filename[:4]}.csv',index = False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +488,7 @@
     "    mf['latitude'] = mf['geometry'].y\n",
     "    mf['longitude'] = mf['geometry'].x\n",
     "    # 특정 반경 (예: 0.01도)\n",
-    "    radius = 0.01\n",
+    "    radius = 0.005\n",
     "\n",
     "    output_folder = f'./{folder_path}/{radius}'\n",
     "    if not os.path.exists(output_folder):\n",
@@ -502,6 +504,7 @@
     "        print(len(filtered_mf),end=\" \")\n",
     "        # 필터링된 mf 데이터를 KDTree에 로드합니다.\n",
     "        tree = KDTree(filtered_mf[['latitude', 'longitude']].values)\n",
+    "        \n",
     "        print(all_files)\n",
     "        for filename in all_files:\n",
     "            file_path = os.path.join(folder_path, filename)\n",
@@ -510,24 +513,14 @@
     "            # mf의 각 좌표에 대해 주어진 반경 내의 모든 df의 좌표의 인덱스를 찾습니다.\n",
     "            indices_list = tree.query_ball_point(df[['latitude', 'longitude']].values, r=radius)\n",
     "\n",
-    "            # 각 near_df 행에 대한 겹치는 mf 좌표의 수를 저장하는 리스트를 초기화합니다.\n",
-    "            overlap_counts = []\n",
-    "                # 모든 인덱스를 하나의 배열로 펼칩니다.\n",
-    "            all_indices = [idx for sublist in indices_list for idx in sublist]\n",
+    "            # 각 target_df 행에 대한 겹치는 mf 좌표의 수를 저장하는 리스트를 초기화합니다.\n",
+    "            overlap_counts = [len(indices) for indices in indices_list]\n",
     "\n",
-    "            # 중복 제거\n",
-    "            unique_indices = np.unique(all_indices)\n",
-    "\n",
+    "            # 겹치는 mf 좌표의 수를 target_df에 새로운 칼럼으로 추가합니다.\n",
+    "            df['overlap_count'] = overlap_counts\n",
+    "            \n",
     "            # 선택된 인덱스를 사용하여 near_df 생성\n",
-    "            near_df = df.iloc[unique_indices].reset_index(drop=True)\n",
-    "\n",
-    "            # 각 near_df 행에 대해 겹치는 mf 좌표의 수를 계산합니다.\n",
-    "            for idx in unique_indices:\n",
-    "                count = sum([1 for sublist in indices_list if idx in sublist])\n",
-    "                overlap_counts.append(count)\n",
-    "                \n",
-    "            # 겹치는 mf 좌표의 수를 near_df에 새로운 칼럼으로 추가합니다.\n",
-    "            near_df['overlap_count'] = overlap_counts\n",
+    "            near_df = df.loc[df['overlap_count'] != 0]\n",
     "\n",
     "            all_dfs.append(near_df)\n",
     "\n",
@@ -542,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +686,7 @@
        "153  1.234693e+03       153  POINT (126.14142 36.72215)  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
