--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -468,6 +468,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "년도별 누적데이터 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial import KDTree\n",
+    "def merged(folder_path):\n",
+    "\n",
+    "    output_folder = f'./{folder_path}/merged/'\n",
+    "    if not os.path.exists(output_folder):\n",
+    "        os.makedirs(output_folder)\n",
+    "        \n",
+    "    folder_path = folder_path\n",
+    "    all_dfs = []  # 모든 데이터프레임을 저장할 리스트\n",
+    "    for year in ['2012','2013','2014','2015','2016', '2017', '2018', '2019', '2020']:\n",
+    "        # 해당 연도의 모든 CSV 파일 목록을 가져옵니다.\n",
+    "        all_files = [f for f in os.listdir(folder_path) if f.endswith('.csv') and int(f[:4]) <= int(year)]\n",
+    "        # 해당 연도 이전의 mf 데이터만 필터링합니다.\n",
+    "\n",
+    "        for filename in all_files:\n",
+    "            file_path = os.path.join(folder_path, filename)\n",
+    "            df = pd.read_csv(file_path, encoding='utf-8')\n",
+    "\n",
+    "\n",
+    "            all_dfs.append(df)\n",
+    "\n",
+    "        # 모든 데이터프레임을 하나로 합칩니다.\n",
+    "        combined_df = pd.concat(all_dfs, ignore_index=True)\n",
+    "        combined_df.to_csv(os.path.join(output_folder, f'{filename[:4]}.csv'),index=False)\n",
+    "merged('./data/surface')\n",
+    "merged('./data/low')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "바다숲과 가까이 있는 해양데이터포인터 찾기"
    ]
   },
